# wattpad-mate

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/actions/build-application/: action.yml
.github/actions/build-docker-image/: action.yml
.github/actions/test-application/: action.yml
.github/workflows/: workflows.yml
src/: main.py
src/scraping/: wattpad_scraping.py
src/tests/: test_main.py  test_wattpad_scraping.py
web_scraping/: wattpad_scraping.py
