[tool.poetry]
name = "wattpad-mate"
version = "0.1.0"
description = "Tool to obtain information from Wattpad and meet users with the same tastes and who are accessible to interact with them"
authors = ["danibcorr <danibcorr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
beautifulsoup4 = "^4.12.3"
selenium = "^4.23.1"
pandas = "^2.2.2"
numpy = "^2.1.0"
ipython = "^8.26.0"
pyarrow = "^17.0.0"
loguru = "^0.7.2"
names-dataset = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
